--- a/styleshetts/main.css
+++ b/styleshetts/main.css
@@ -37,6 +37,10 @@ content: "";
 clear: both;
 display: table;
 }
+.active{
+	background: #0ACE99;
+	border-radius: 3px;
+}
 
 /*******************header********************/
 
@@ -107,22 +111,23 @@ margin:0;
 
 /****************footer*****************/
 
-footer.main{
+footer.footer{
 text-align: center;
 padding: 15px;
 
 
 }
-footer.main img {
+footer.footer img {
 	width: 24px;
+
 }
 
-footer main a{
+footer .footer a{
 	display: inline-block;
 	padding: 5px 10px;
 }
 
-footer.main p {
+footer.footer p {
 	font-size: 1.2rem;
 }
 
