--- a/styleshetts/main.css
+++ b/styleshetts/main.css
@@ -59,7 +59,7 @@ img{
 
 main{
 	min-height: calc(100vh - 138.5px - 104px);
-	padding-top: 138.5px;
+	padding-top: 200px;
 }
 
 /*******************header********************/
@@ -70,7 +70,7 @@ header{
 	position: fixed;
 	top: 0;
 	width: 100%;
-
+    z-index: 1;
 }
 
 header .logo-container{
