--- a/styleshetts/main.css
+++ b/styleshetts/main.css
@@ -23,7 +23,7 @@ body{
 a{
 	text-decoration: none;
 	font-size: 1.4rem;
-	color: #000;
+	color: black;
 }
 
 .btn{
@@ -34,6 +34,7 @@ color: #fff;
 text-transform: uppercase;
 border: 0;
 transition: background .3%;
+border-radius: 50px;
 
 }
 
@@ -71,22 +72,25 @@ img{
 
 main{
 	min-height: calc(100vh - 138.5px - 104px);
-	padding-top: 90px;
+	padding-top: 0px;
 }
 
 /*******************header********************/
 
 header{
-	background: black;
+	background: rgba(0, 0, 0, .7);
 	text-align: center;
 	position: fixed;
 	top: 0;
 	width: 100%;
-    z-index: 1;
+  z-index: 1;
+  position: fixed;
+  height: 70px;
+  box-shadow: 0 3px 2px rgba(0,0,0,.5)
 }
 
 header .logo-container{
-	padding: 10px;
+	padding: 2.5px 20px;
 }
 
 header img{
@@ -96,7 +100,6 @@ header img{
 /******************* Nvigation********************/
 
 nav {
-	background: #0d9b75;
 	padding: 10px;
 }
 
@@ -119,11 +122,13 @@ nav li a{
 }
 /*******************hero banner********************/
 #hero{
-background-image: url(../images/torta.jpg);
+background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../images/torta.jpg);
+
 color: #fff;
-padding-top: 40px;
+
 background-size: cover;
-background-size: center;
+background-attachment: fixed;
+padding-top: 70px;
 }
 
 #hero .hero-caption{
@@ -153,6 +158,10 @@ background-size: center;
 	flex: 0 1 50%;
 	padding: 15px;
 	position: relative;
+}
+
+#gallery a{
+	display: block;
 }
 
 
@@ -289,41 +298,42 @@ footer.footer p {
 
 @media only screen and (min-width: 992px) {
 
-    header{
-    	display: flex;
-    	justify-content: space-between;
-    	align-items: center;
-    }
+  .header{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+  }
 
-    header .logo-container{
+  header .logo-container{
     	
-    } 
+  } 
 
-	nav{
 
-     background: black;
-     
-	}
-
-	nav li a{ 
-	transition: background .3s;
+  nav li a{ 
+	 transition: background .3s;
 	}
 
 	nav li a:hover, nav li a.active {
-	background: #ff6600;
-	border-radius: 3px;
-  }
-   #gallery .item{
-    transition: opacity .3s;
-  } 
-  #gallery .item:hover{
-  	opacity: .7;
-  } 
+	 background: #ff6600;
+	 border-radius: 3px;
+	}
+
+	#gallery .item{
+	 transition: opacity .3s;
+	}
+
+	#gallery .item:hover{
+	 opacity: .7;
+	} 
 
 }
 
 	
-
+@media only screen and (max-width:  991px) {
+	nav{
+		background: black;
+	}
+}
 
 
 
