--- a/styleshetts/main.css
+++ b/styleshetts/main.css
@@ -136,6 +136,23 @@ padding-top: 70px;
 	padding: 140px 20px; 
 }
 
+ 
+
+
+ #hero h1{
+	 opacity: 0;
+	 animation: fade-to-left .5s .6s forwards ease-in;
+	}
+
+ #hero h2{
+     opacity: 0;
+     animation: fade-to-right .5s 1.4s forwards ease-in;
+    }
+
+    #hero .btn{
+    opacity: 0;
+ 	animation: fade-in .5s 2s forwards ease-in; 
+ }
 
 /*******************galery********************/
 
@@ -348,4 +365,53 @@ footer.footer p {
 	 clear: left;
   }
 
+}
+
+
+
+
+
+
+
+
+/**************** animation *****************/
+
+
+@keyframes  fade-in{
+    0%{
+       opacity: 0;
+	}
+	100%{
+       opacity: 1;
+	}
+}
+
+
+
+
+
+
+
+
+@keyframes  fade-to-left{
+    0%{
+       opacity: 0;
+       transform: translateX(50px);
+	}
+	100%{
+       opacity: 1;
+       transform: translateX(0);
+	}
+}
+
+
+@keyframes  fade-to-right{
+    0%{
+       opacity: 0;
+       transform: translate(-50px);
+	}
+	100%{
+       opacity: 1;
+       transform: translateX(0);
+	}
 }
